<resources>
    <string name="app_name">KuyumcuTakipSistemi</string>
    <string name="title_activity_envanter_menu">EnvanterMenu</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="kategoriler">Kategoriler</string>
    <string name="markalar">Markalar</string>
    <string name="altin">Altın</string>
    <string name="ziynet">Ziynet</string>
    <string name="doviz">Döviz</string>
    <string name="pirlanta">Pırlanta</string>
    <string name="saat">Saat</string>
    <string name="communitation">iletişim</string>
    <string name="tumu">Tümü</string>
    <string name="borclular">Borçlular</string>
    <string name="emanetler">Emanetler</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="hizli_islem">Hızlı İşlem</string>
    <string name="perakende_islem">Perakende İşlem</string>


</resources>